--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
   "name": "mondrian-rest-ui",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
-    "react-scripts": "^1.0.13",
+    "react-scripts": "^1.1.4",
     "redux-logger": "^2.6.1"
   },
   "dependencies": {
     "@react-bootstrap/pagination": "^1.0.0",
-    "lodash": "^4.14.1",
+    "ajv": "^5.5.2",
+    "lodash": "^4.17.10",
     "mondrian-rest-client": "^1.0.0",
+    "prettier": "^0.11.0",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
+    "react": "^15.6.2",
     "react-bootstrap": "^0.32.1",
     "react-clipboard.js": "^1.1.2",
-    "react-dom": "^16.2.0",
+    "react-dom": "^15.6.2",
     "react-helmet": "^5.1.3",
     "react-redux": "^5.0.3",
-    "react-select": "^1.0.0-rc.10",
+    "react-select": "^1.2.1",
     "react-syntax-highlighter": "^5.6.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.1.0",
     "redux-undo": "^1.0.0-beta9-9",
-    "vega-embed": "3.0.0-beta.18",
-    "vega-lite": "^2.0.0",
-    "vega-tooltip": "^0.4.4"
+    "vega-embed": "^3.14.0",
+    "vega-lite": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
